Full responsive applied

--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,8 @@ header{
     flex-direction: column;
     row-gap: 1.4rem;
     padding: 30px 0;
-    margin-top: 100px;
+    margin-top: 900px;
+    width: 100%;
 }
 
 .footer p{
@@ -395,12 +396,14 @@ header{
 /* Contact form */
 .contact {
     margin-top: 830px;
+    display: none;
 }
 .contact-form{
     max-width: 600px;
     margin: auto;
     width: 100%;
-    display: grid;
+    /* En desarrollo */
+    display: none;
     row-gap: 1rem;
 }
 .contact-form input,.contact-form textarea{
@@ -427,4 +430,141 @@ header{
 .contact-form .send-btn:hover {
     background: #546eff;
     transition: 0.2s all linear;
+}
+form .error-mostrar{
+    border: 2px solid red;
+    color: var(--bg-color);
+    background-color: var(--box-color);
+}
+form .correcto{
+    border: 2px solid green;
+    color: var(--bg-color);
+    background-color: var(--box-color);
+}
+
+/* Making responsive */
+
+@media (max-width:990px){
+    .container{
+        margin: 0 auto;
+        width: 90%;
+    }
+    .footer{
+        margin-top: 900px;
+    }
+}
+@media (max-width:892px){
+   section{
+       padding: 2rem 0;
+   }
+   .nav{
+       padding: 12px 0;
+   }
+   .heading {
+   font-size: 4rem;
+   }
+   .portfolio-box{
+    height: 257px;
+   }
+}
+@media (max-width:775px){
+    .logo{
+        font-size: 1.1rem;
+    }
+    .home{
+        min-height: 500px;
+        padding-top: 6rem;
+    }
+    .home-text h3{
+        font-size: 1rem;
+    }
+    .home-text h2{
+        font-size: 3rem;
+        line-height: 3.8rem;
+    }
+    .home-text p{
+        font-size: 0.825rem;
+    }
+    .services-content{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .portfolio-box{
+        height: 245px;
+    }
+    .menu-icon{
+        display: flex;
+    }
+    .navbar{
+        position: absolute;
+        top: 0;
+        right: -100%;
+        width: 300px;
+        height: 100vh;
+        background: var(--box-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px 20px;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .open-menu{
+        right: 0;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .nav-link{
+        display: block;
+        margin: 1rem 0;
+    }
+}
+@media (max-width:635px){
+    .about-content{
+        grid-template-columns: 1fr;
+    }
+    .about-data span{
+        font-size: 0.9rem;
+    }
+    .about-data h2{
+        font-size: 1.7rem;
+        line-height: 2.3rem;
+        font-weight: 600;
+        margin: 0.8rem 0;
+    }
+    .about-data p{
+        font-size: 0.825rem;
+        margin-bottom: 1.3rem;
+    }
+
+}
+@media (max-width:450px){
+    .home {
+        min-height: 485px;
+        padding-top: 5rem;
+    }
+    .home-img {
+        width: 140px;
+        height: 140px;
+    }
+    .home-img img{
+        width: 140px;
+        height: 140px;
+    }
+    .home-text h2{
+        font-size: 2.1rem;
+        line-height: 3.2rem;
+    }
+    .home-text p br{
+        display: contents;
+    }
+    .heading {
+        font-size: 3rem;
+    }
+    .about-data h2{
+        font-size: 1.5rem;
+        line-height: 2.1rem;
+        margin: 0.6rem 0;
+    }
+    .services-content, 
+    .portfolio-content {
+        grid-template-columns: 1fr;
+    }
 }
