--- a/styles.css
+++ b/styles.css
@@ -534,19 +534,20 @@ form .correcto{
     .navbar{
         position: absolute;
         top: 0;
-        right: -100%;
+        display: none;
         width: 300px;
         height: 100vh;
         background: var(--box-color);
-        display: flex;
+/*         display: flex; */
         flex-direction: column;
         align-items: center;
         padding: 50px 20px;
-        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: 1.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     .open-menu{
         right: 0;
-        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        display: flex;
+        transition: 1.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     .nav-link{
         display: block;
@@ -611,5 +612,6 @@ form .correcto{
     }
     body{
         overflow-x: hidden;
+
      }
 }
